feat: support git dependencies

--- a/example/index.html
+++ b/example/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="/node_modules/@fontsource/roboto-slab/latin.css"
     />
+    <link rel="stylesheet" href="./style.scss" />
     <style>
       body {
         font-family: 'Roboto Slab', sans-serif;
@@ -16,12 +17,14 @@
   </head>
   <body>
     <h1>Example Page</h1>
-    <p>Just a page to demonstrate how to use pnpm2nix</p>
-    <p>
-      If everything works as intended this text should be rendered in "Roboto
-      Slab" and there should be an npm-Icon to the right:
-      <i class="fa-brands fa-npm"></i>
-    </p>
+    <div class="sheet">
+      <p>Just a page to demonstrate how to use pnpm2nix</p>
+      <p>
+        If everything works as intended this text should be rendered in "Roboto
+        Slab" and there should be an npm-Icon to the right:
+        <i class="fa-brands fa-npm"></i>
+      </p>
+    </div>
 
     <script src="/node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
   </body>
